# svo_project

./: README.md
model_description/: CMakeLists.txt  package.xml
model_description/launch/: gscam.launch
model_description/meshes/: camera.stl
model_description/robots/: gscam.urdf.xacro
model_description/urdf/sensor/: camer.gazebo.xacro  camera.gazebo.xacro  camera.urdf.xacro
model_gazebo/: CMakeLists.txt  package.xml
model_gazebo/launch/: model_empty_world.launch  model_spawner.launch  spawn_camera.launch
