<?xml version="1.0"?>
<package>
  <name>model_description</name>
  <version>1.0.0</version>
  <description>The model_description package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/svo_project</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
</package>
